<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/website_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/http_google_com"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="92dp"
        tools:layout_editor_absoluteY="24dp" />

    <Button
        android:id="@+id/open_website_button"
        android:layout_width="200dp"
        android:onClick="openWebsite"
        android:layout_height="wrap_content"
        android:text="@string/abrir_website" />

    <EditText
        android:id="@+id/location_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/s_o_paulo"
        android:inputType="textPersonName"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/open_location_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="abrirLocalizacao"
        android:text="@string/abrir_localiza_o" />

    <EditText
        android:id="@+id/share_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/um_texto_aleat_rio"
        android:inputType="textPersonName"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/share_text_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="compartilharTexto"
        android:text="@string/compartilhar_esse_texto" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="tirarFoto"
        android:text="tirar foto" />

</LinearLayout>